feat: Update project listings and descriptions in English and Spanish pages

--- a/src/pages/en/projects/index.astro
+++ b/src/pages/en/projects/index.astro
@@ -61,21 +61,6 @@ const headings = [
           { type: 'site', href: 'https://david7ce.github.io/toolbox-installer/' }
         ]
       },
-      {
-        name: '📚 Wiki of Computing',
-        description: 'A documentation wiki made with Obsidian + Quartz.',
-        links: [
-          { type: 'site', href: 'https://compuwiki.github.io/' },
-          { type: 'doc', href: 'https://quartz.jzhao.xyz/' }
-        ]
-      },
-      {
-        name: '🌱 Wiki of Cosmos',
-        description: 'A cosmological wiki using Obsidian.md with <a href="https://dg-docs.ole.dev/" target="_blank" rel="noopener">DG Docs</a>.',
-        links: [
-          { type: 'site', href: 'https://wikiterra.github.io/' }
-        ]
-      },
     ]}
   />
 
@@ -98,56 +83,28 @@ const headings = [
       },
       {
         name: '🧠 Obsidian PKM Vault',
-        description: 'A comprehensive Personal Knowledge Management system using Obsidian with organized vault structures, templates, and workflows for effective note-taking and knowledge organization.',
+        description: 'Categorization of knowledge vaults for Obsidian, for multiple topics.',
         links: [
           { type: 'github', href: 'https://github.com/obsidian-pkm-vault' }
         ]
-      }
+      },
+            {
+        name: '📚 Wiki of Computing',
+        description: 'A documentation wiki made with Obsidian + Quartz.',
+        links: [
+          { type: 'site', href: 'https://compuwiki.github.io/' },
+          { type: 'doc', href: 'https://quartz.jzhao.xyz/' }
+        ]
+      },
+      {
+        name: '🌱 Wiki of Cosmology',
+        description: 'A cosmological wiki using Obsidian.md with the DG Docs plugin.',
+        links: [
+          { type: 'site', href: 'https://wikiterra.github.io/' }
+        ]
+      },
     ]}
   />
-
-  <!-- <h2 id='learnings'>Learnings</h2>
-  <ProjectSection
-    class='my-2'
-    project={[
-      {
-        name: 'Rust Learning',
-        description: 'Some notes and code about CWorld learning Rust',
-        links: [{ type: 'github', href: 'https://github.com/cworld1/rust-learning' }]
-      },
-      {
-        name: 'CS 213 Learning',
-        description: 'Notes, code and experiences for Introduction to Computer Systems course',
-        links: [
-          {
-            type: 'github',
-            href: 'https://github.com/zhuozhiyongde/Introduction-To-Computer-System-2023Fall-PKU'
-          }
-        ]
-      },
-      {
-        name: "Astro JS Learning",
-        description: 'Notes and code about Astro JS learning',
-        links: [
-          {
-            type: 'github',
-            href: '',
-          }
-        ]
-      },
-      {
-        name: 'Web Development Learning',
-        description: 'Notes and code about Web Development learning',
-        links: [
-          {
-          type: 'github',
-          href: '',
-          }
-        ]
-      }
-    ]}
-  /> -->
-
 </PageLayout>
 
 <script
