--- a/src/components/Comment.astro
+++ b/src/components/Comment.astro
@@ -10,18 +10,13 @@ import { integ } from '../site.config'
     <div class="waline-container">
       <div id="waline"></div>
       <script define:vars={{ serverURL: integ.waline.server }} is:inline>
-        import { init } from 'https://unpkg.com/@waline/client@v3/dist/waline.mjs';
+        import { init } from 'https://unpkg.com/@waline/client@3.1.3/dist/waline.js';
         
         init({
           el: '#waline',
           serverURL,
           ...Object.assign(
             {},
-            {
-              lang: 'en',
-              dark: 'html.dark',
-              emoji: ['https://unpkg.com/@waline/emojis@1.1.0/weibo']
-            },
             {/* Additional configs from site config */},
           ),
         });
