--- a/src/components/BlogNavigation.astro
+++ b/src/components/BlogNavigation.astro
@@ -25,18 +25,18 @@ const getUrl = (post: CollectionEntry<'blog'>) => {
 
 <div class='flex max-sm:flex-col sm:justify-between gap-2 mt-3 sm:mt-6'>
   {prev && (
-    <a href={getUrl(prev)} class='group inline-flex items-center gap-x-2 rounded-xl px-4 py-2 hover:bg-muted'>
-      <svg xmlns='http://www.w3.org/2000/svg' width='20' height='20' viewBox='0 0 24 24' fill='none' stroke-width='2.5' class='shrink-0 rotate-180 stroke-muted-foreground group-hover:stroke-primary'>
-        <polyline points='12 5 19 12 12 19' />
+    <a href={getUrl(prev)} class='group inline-flex items-center gap-x-2 rounded-xl px-4 py-2 hover:bg-muted transition-colors'>
+      <svg xmlns='http://www.w3.org/2000/svg' width='20' height='20' viewBox='0 0 24 24' fill='none' stroke-width='2.5' class='shrink-0 rotate-180 stroke-muted-foreground group-hover:stroke-primary transition-colors'>
+        <polyline points='12 5 19 12 12 19' class='transition-transform group-hover:translate-x-1' />
       </svg>
       <p class='truncate font-medium'>{prev.data.title}</p>
     </a>
   )}
   {next && (
-    <a href={getUrl(next)} class='group inline-flex items-center gap-x-2 rounded-xl px-4 py-2 hover:bg-muted ml-auto'>
+    <a href={getUrl(next)} class='group inline-flex items-center gap-x-2 rounded-xl px-4 py-2 hover:bg-muted transition-colors ml-auto'>
       <p class='truncate font-medium'>{next.data.title}</p>
-      <svg xmlns='http://www.w3.org/2000/svg' width='20' height='20' viewBox='0 0 24 24' fill='none' stroke-width='2.5' class='shrink-0 stroke-muted-foreground group-hover:stroke-primary'>
-        <polyline points='12 5 19 12 12 19' />
+      <svg xmlns='http://www.w3.org/2000/svg' width='20' height='20' viewBox='0 0 24 24' fill='none' stroke-width='2.5' class='shrink-0 stroke-muted-foreground group-hover:stroke-primary transition-colors'>
+        <polyline points='12 5 19 12 12 19' class='transition-transform group-hover:translate-x-1' />
       </svg>
     </a>
   )}
